to fixe scrool on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -237,10 +237,7 @@ body {
     z-index: 0;
   }
   .background {
-    background-image: url(./assets/img/desk.jpg);
-    opacity: 0.4;
-
-  }
+  display: none;}
 
   .App {
     align-items: center;
@@ -249,6 +246,8 @@ body {
     width: 100vw;
     height: auto;
     justify-content: center;
+    background-image: url(./assets/img/desk.jpg);
+
   }
 
   /*-------------- CARDS MEDIA QUERIES -------------- */
